[package]
name = "periodicsynth"
description = "A simple periodic function synthesizer for Sine, Square, Triangle, Sawtooth waves with arbitary frequency."
readme = "README.md"
version = "0.1.3"
categories = ["multimedia", "multimedia::audio"]
keywords = ["synthesizer", "audio", "oscillator", "dsp", "signal"]
authors = ["nullvideo <bsantanu381@gmail.com>", "Lyam Witherow <lyamcwitherow@gmail.com>"]
license = "MIT"
exclude = ["target/**/*", "*.lock", "*.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
